# runtime

./: CMakeLists.txt  main.cpp
script/: reflection.py
src/runtime/: AbstractGenerated.cpp  AbstractGenerated.h  ClassFactory.cpp  ClassFactory.h  RObject.cpp  RObject.h
src/test/: Player.cpp  Player.h
